--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@
 # │ A useful starting point for global .gitignore file contents can be found  │
 # │ at https://github.com/github/gitignore/tree/main/Global (as of 2022-07-14)│
 # ╰───────────────────────────────────────────────────────────────────────────╯
+
+# Project-specific things to ignore ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+docs/_build
+*.tmp
+*.log
