build: test that python deps are installed

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,7 +8,7 @@
 # The following is based on the approach posted by Jonathan Ben-Avraham to
 # Stack Overflow in 2014 at https://stackoverflow.com/a/25668869
 
-PROGRAMS_NEEDED = sphinx-build
+PROGRAMS_NEEDED = sphinx-build pip
 TEST := $(foreach p,$(PROGRAMS_NEEDED),\
 	  $(if $(shell which $(p)),_,$(error Cannot find program "$(p)")))
 
@@ -24,6 +24,7 @@ SPHINXAUTO   = sphinx-autobuild
 SRCDIR	     = .
 BUILDDIR     = _build
 
+
 # Actions ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 # Put it first so that "make" without argument is like "make help".
@@ -34,15 +35,21 @@ help:
 	@$(SPHINXBUILD) -M help "$(SRCDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O) |\
 	  egrep -v '^Sphinx|Please' | sort | expand -t 20
 
-auto autobuild live livehtml:
+check-python-requirements:
+ifneq ($(filter Location:,$(shell pip show pygments)),Location:)
+	$(error One or more Python dependencies are not installed \
+	        – has "pip -r requirements.txt" been run?)
+endif
+
+auto autobuild live livehtml: check-python-requirements
 	@$(SPHINXAUTO) "$(SRCDIR)" "$(BUILDDIR)"/html $(SPHINXOPTS) $(O)
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
+%: Makefile check-python-requirements
 	@$(SPHINXBUILD) -M $@ "$(SRCDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 
 # Cleanup and miscellaneous directives ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-.PHONY: help auto autobuild livehtml Makefile
+.PHONY: help auto autobuild livehtml Makefile check-python-requirements
